--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" type="image/png" href="./img/burger.png"/>
-  <title>Resutrant Design</title>
+  <title>Heaven Meal</title>
 
   <style>
     * {
