--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
     #preloaderouterdiv {
 position: fixed;
-        display: grid;
-        place-items: center;
+        display: flex;
+        display:-ms-flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         height: 100vh;
         z-index: 121312345435345345;
@@ -178,10 +180,27 @@ border-right: 2px solid #90272f;
 </head>
 <!-- body starting  -->
 
-<body onload="closepreloader()" >
 
 
-  <div  id="preloaderouterdiv">
+
+
+<body  onload="closepreloader()" >
+
+<div id="mainbodybody">
+
+ 
+</div>
+
+
+
+
+
+
+
+
+  <!-- .......................  -->
+
+  <div style="display: none;" id="preloaderouterdiv">
     <div class="preinnerdiv">
         <div class="prering">
 
