--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ border-right: 2px solid #90272f;
 
   <!-- .......................  -->
 
-  <div style="display: none;" id="preloaderouterdiv">
+  <div  id="preloaderouterdiv">
     <div class="preinnerdiv">
         <div class="prering">
 
